@@ -1,3 +1,8 @@
+2001-04-26  Clint Adams  <clint@zsh.org>
+
+        * 14123: acconfig.h, configure.in, Src/Modules/termcap.c:
+	don't include curses.h in termcap.c if term.h doesn't need it.
+
 2001-04-26  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 14117: Completion/Base/Utility/_arguments, Doc/Zsh/compsys.yo:
